# FinanceTool

./: .dockerignore  .gitattributes  .gitignore  .lighthouserc.cjs  .pre-commit-config.yaml  LICENSE  README.md  Use-Demo.ps1  Use-Local.ps1  docker-compose.demo.yml  docker-compose.dev.yml  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  pytest.ini  run_demo.ps1  run_demo_docker.ps1  run_dev.ps1  run_dev_docker.ps1  setup_install.ps1  tsconfig.json
backend/: .env.demo  .env.dev  .env.example  Dockerfile  Dockerfile.dev  app.py  config.py  pyproject.toml  requirements.txt  ruff.toml
backend/models/: models.py
backend/routes/: __init__.py  acc_info.py  car_evaluation.py  debug.py  expenses.py  file_upload_routes.py  financing.py  health.py  house.py  incomes.py  investments.py  loans.py  months.py  my_new_tab.py  planned_purchases.py  settings.py  settings_prices.py
backend/routes/cars/: __init__.py  pricing.py  routes.py  serialize.py  util.py
backend/seeds/: create_db.py  reset_db.py  seed_acc_info.py  seed_all.py  seed_cars.py  seed_financing.py  seed_house_land.py  seed_incomes.py  seed_incomes_demo.py  seed_investments.py  seed_months.py  seed_planned_purchases.py  seed_price_settings.py
backend/seeds/common/: category_map.json  seed_car_evaluation.json  seed_price_settings.json
backend/tests/: conftest.py  test_energy.py
backend/tools/: bootstrap_schema.py  create_pg_db.py  verify_demo.py
backend/utils/: categorizer.py  charging.py  db_bootstrap.py  depreciation.py  energy.py  format.py  seeds.py  settings.py  tco.py
(+111 files in other folders)
