# backend/pyproject.toml
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "financetool-backend"
version = "0.1.0"
description = "FinanceTool Flask API"
requires-python = ">=3.12"
readme = "../README.md"
license = { text = "MIT" }

# Keep only hard runtime deps here (adjust to your real list)
dependencies = [
  "Flask>=3",
  "Flask-Cors>=4",
  "Flask-SQLAlchemy>=3",
  "SQLAlchemy>=2",
  "python-dotenv>=1",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]

[tool.hatch.build.targets.wheel]
# Package the existing 'backend' module as-is
packages = ["backend"]

# If you have non-.py assets (migrations, JSON, etc.), include them, e.g.:
# include = ["backend/**/migrations/**", "backend/**/*.json"]
